--- a/templates/pages/artiste.html
+++ b/templates/pages/artiste.html
@@ -35,7 +35,7 @@
     </dl>
     {% else %}La base de données est en cours de constitution. Aucun.e artiste n'a encore été ajouté.e.
     {% endif %}
-    <p><a href="{{url_for('accueil')}}">Revenir à l'accueil</a></p>
+    <p><a href="{{url_for('accueil')}}">Revenirœ à l'accueil</a></p>
 
 {% endblock %}
 
