--- a/duchamp_reader/templates/pages/about.html
+++ b/duchamp_reader/templates/pages/about.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
 {% extends "conteneur.html" %}
 
 {% block titre %}
@@ -25,8 +23,6 @@
         <dt><strong>Galeries</strong></dt><dd>les galeries représentant les nominé.es</dd>
         <dt><strong>Villes</strong></dt><dd>les villes d'origine et de résidence des artistes</dd>
         <dt><strong>Thèmes</strong></dt><dd>les thèmes sur lesquels portent les nominations au prix Marcel Duchamp</dd>
-        <dt><strong>Le prix en statistiques</strong></dt><dd>découvrir des statistiques sur le prix Marcel Duchamp</dd>
+        <dt><strong>Le prix Marcel Duchamp en statistiques</strong></dt><dd>découvrir des statistiques sur le prix Marcel Duchamp</dd>
     </dl>
 {% endblock %}
-
-</html>
