--- a/duchamp_reader/templates/pages/accueil.html
+++ b/duchamp_reader/templates/pages/accueil.html
@@ -1,10 +1,10 @@
 {% extends "conteneur.html" %}
 
-{% block recherche %}
+{% block homesearch %}
     {% include "partials/recherche.html" %}
 {% endblock %}
 
-    {% block corps %}
+{% block corps %}
     <h1>Bienvenue sur le <strong>duchamp_reader</strong></h1>
     <p>Le duchamp_reader est une application qui permet d'explorer les quatre dernières
         éditions du prix Marcel Duchamp (2018-2021).<br>
