--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -5,19 +5,26 @@
         <title>duchamp_reader {%block titre %}{%endblock%}</title>
         {% include "partials/css.html" %}
         {% include "partials/metadata.html" %}
+        </style>
     </head>
     <body>
-
-      <div class="container">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
-        </nav>
-        <div class="row">
-            <div class="col">
-            {% block corps %}{% endblock %}
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+                <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
+                <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
+                    <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide" aria-label="Recherche">
+                    <button class="btn btn-outline-info" type="submit">Rechercher</button>
+                </form>
+            </nav>
+            {% block homesearch %}{% endblock %}
+            <div class="row">
+                <div class="col">
+                    {% block corps %}{% endblock %}
+                </div>
             </div>
         </div>
-      </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
     </body>
 </html>
