--- a/duchamp_reader/templates/pages/accueil.html
+++ b/duchamp_reader/templates/pages/accueil.html
@@ -8,11 +8,11 @@
     <h1>Bienvenue sur le <strong>duchamp_reader</strong></h1>
     <p>Le duchamp_reader est une application qui permet d'explorer les quatre dernières
         éditions du prix Marcel Duchamp (2018-2021).<br>
-        Créé en 2000 en partenariat avec l'ADIAF (Association pour la diffusion internationale
-        de l'art français) pour mettre en lumière la scène artistique française, le prix Marcel
-        Duchamp cherche à rendre visible la diversité des pratiques artistiques contemporaines.
-        Chaque année, quatre artistes sont nominé.e.s. Un.e lauréat.e est ensuite désigné.e
-        après le vote d'un jury.</p>
+        Créé en 2000 en partenariat avec <a href="https://www.adiaf.com/">l'ADIAF</a>
+        pour mettre en lumière la scène artistique française, le prix Marcel Duchamp cherche
+        à rendre visible la diversité des pratiques artistiques contemporaines. Chaque année,
+        quatre artistes sont nominé.e.s. Un.e lauréat.e est ensuite désigné.e après le vote
+        d'un jury.</p>
     {% if nomination %}
         <p>Les dernier.ère.s nominé.e.s au prix Marcel Duchamp sont :</p>
         {% for nomination in nominations %}
