--- a/duchamp_reader/templates/pages/accueil.html
+++ b/duchamp_reader/templates/pages/accueil.html
@@ -13,19 +13,33 @@
         à rendre visible la diversité des pratiques artistiques contemporaines. Chaque année,
         quatre artistes sont nominé.e.s. Un.e lauréat.e est ensuite désigné.e après le vote
         d'un jury.</p>
+
+    <!-- montrer les artistes sur la page d'accueil -- à supprimer ? -->
+    {% if artistes %}
+        <p>Les dernier.ère.s artistes ajoutées à la base sont</p>
+        <ul>
+        {% for artiste in artistes %}
+            <li>{{artiste.prenom}} {{artiste.nom}} est né.e en {{artiste.annee_naissance}}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+
+    <!-- montrer les nominations sur la page d'accueil -->
     {% if nomination %}
         <p>Les dernier.ère.s nominé.e.s au prix Marcel Duchamp sont :</p>
+        <ul>
         {% for nomination in nominations %}
-            <ul>
-                <li><a href="{{url_for('nomination', nomin_id=nomination.id)}}"></a>
-                    {{nomination.annee}} : {{artiste.prenom}}{{artiste.nom}}
-                </li>
-                <!-- ce qu'il se passe au dessus : je crée un renvoi vers la fonction nomination(),
-                qui affichera une page complète d'info pour une nomination ; on s'assurera qu'on renvoie vers la bonne nomination avec nomination.id .
-                comme contenu à afficher : l'année de nomination : prénom et nom de l'artiste (avec nomination et artiste 2 variables qu'il faudra
-                créer pour la fonction accueil(); pour artiste, il faudra faire la jointure avec la table nomination dans accueil()-->
-            </ul>
+            <li><a href="{{url_for('nomination', nomin_id=nomination.id)}}"></a>
+                {{nomination.annee}} : {{artiste.prenom}}{{artiste.nom}}
+            </li>
+            <!-- ce qu'il se passe au dessus : je crée un renvoi vers la fonction nomination(),
+            qui affichera une page complète d'info pour une nomination ; on s'assurera qu'on renvoie vers la bonne nomination avec nomination.id .
+            comme contenu à afficher : l'année de nomination : prénom et nom de l'artiste (avec nomination et artiste 2 variables qu'il faudra
+            créer pour la fonction accueil(); pour artiste, il faudra faire la jointure avec la table nomination dans accueil()-->
+        </ul>
         {% endfor %}
+
+    <!-- sinon, indiquer que la bdd est en cours de constitution -->
     {% else %}
         <p>La base de données est en cours de constitution. Des données doivent encore être ajoutées.</p>
     {% endif %}
