--- a/duchamp_reader/templates/pages/accueil.html
+++ b/duchamp_reader/templates/pages/accueil.html
@@ -43,5 +43,7 @@
     {% else %}
         <p>La base de données est en cours de constitution. Des données doivent encore être ajoutées.</p>
     {% endif %}
-    <a href="{{url_for('about')}}">À propos</a>
+    <p><a href="{{url_for('nomination_index')}}">Nominations</a></p>
+    <p><a href="{{url_for('artiste_index')}}">Artistes</a></p>
+    <p><a href="{{url_for('about')}}">À propos</a></p>
 {% endblock %}
