--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -1,30 +1,128 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>duchamp_reader {%block titre %}{%endblock%}</title>
-        {% include "partials/metadata.html" %}
-        {% include "partials/css.html" %}
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-                <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
-                <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
-                    <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide" aria-label="Recherche">
-                    <button class="btn btn-outline-info" type="submit">Rechercher</button>
-                </form>
+<head>
+    <meta charset="UTF-8">
+    <title>duchamp_reader {%block titre %}{%endblock%}</title>
+    {% include "partials/metadata.html" %}
+    {% include "partials/css.html" %}
+    </style>
+</head>
+<body>
+<div class="container">
+
+    <!-- barre de navigation -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
+        <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
+            <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide"
+                   aria-label="Recherche">
+            <button class="btn btn-outline-info" type="submit">Rechercher</button>
+        </form>
+    </nav>
+
+    <!-- barre de navigation -->
+    <div class="wrapper">
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Menu</h3>
+            </div>
+            <ul class="list-unstyled components">
+                <li class="active">
+                    <a href="{{ url_for('accueil') }}" data-toggle="collapse" aria-expanded="false"
+                       class="dropdown-toggle">
+                        Accueil
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="{{ url_for('nomination_index') }}" data-toggle="collapse" aria-expanded="false"
+                        class="dropdown-toggle">
+                        Nominations
+                    </a>
+                    <ul class="collapse list-unstyled submenu">
+                        {% if last_nominations %}
+                            {% for n in last_nominations %}
+                                <li><a href="{{ url_for('nomination_main', id_nomination=n.id) }}">
+                                {% if n.laureat == 1 %}Lauréat :{% else %}Nominé.e : {% endif %}
+                                    {{n.artiste.prenom}} {{n.artiste.nom}}</a></li>
+                                {% endfor %}
+                        {% endif %}
+                        </ul>
+                    </li>
+                    <li class="active">
+                        <a href="{{ url_for('artiste_index') }}" data-toggle="collapse" aria-expanded="false"
+                           class="dropdown-toggle">
+                            Artistes
+                        </a>
+                        <ul class="collapse list-unstyled submenu">
+                            {% if last_artistes %}
+                                {% for n in last_artistes %}
+                                    <li><a href="{{ url_for('artiste_main', id_artiste=n.id) }}">{{n.prenom}} {{n.nom}}</a></li>
+                                {% endfor %}
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="active">
+                        <a href="{{ url_for('galerie_index') }}" data-toggle="collapse" aria-expanded="false"
+                            class="dropdown-toggle">
+                            Galeries
+                        </a>
+                        <ul class="collapse list-unstyled submenu">
+                            {% if last_galeries %}
+                                {% for n in last_galeries %}
+                                    <li><a href="{{ url_for('galerie_main', id_galerie=n.id) }}">{{n.nom}}</a></li>
+                                {% endfor %}
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="active">
+                        <a href="{{ url_for('theme_index') }}" data-toggle="collapse" aria-expanded="false"
+                            class="dropdown-toggle">
+                            Thèmes
+                        </a>
+                        <ul class="collapse list-unstyled submenu">
+                            {% if last_themes %}
+                                {% for n in last_themes %}
+                                    <li><a href="{{ url_for('theme_main', id_theme=n.id) }}">{{n.nom}}</a></li>
+                                {% endfor %}
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="active">
+                        <a href="{{ url_for('ville_index') }}" data-toggle="collapse" aria-expanded="false"
+                            class="dropdown-toggle">
+                            Villes
+                        </a>
+                        <ul class="collapse list-unstyled submenu">
+                            {% if last_villes %}
+                                {% for n in last_villes %}
+                                    <li><a href="{{ url_for('ville_main', id_ville=n.id) }}">{{n.nom}} ({{n.pays}})</a></li>
+                                {% endfor %}
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="active">
+                        <a href="{{ url_for('about') }}" data-toggle="collapse" aria-expanded="false"
+                            class="dropdown-toggle">
+                            À propos
+                        </a>
+                    </li>
+                </ul>
             </nav>
-            {% block homesearch %}{% endblock %}
-            <div class="row">
-                <div class="col">
-                    {% block corps %}{% endblock %}
-                </div>
+        </div>
+
+        <!-- recherche -->
+        {% block homesearch %}{% endblock %}
+
+        <!-- corps du texte -->
+        <div class="row">
+            <div class="col">
+                {% block corps %}{% endblock %}
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     </body>
 </html>
