--- a/duchamp_reader/templates/conteneur.html
+++ b/duchamp_reader/templates/conteneur.html
@@ -1,128 +1,195 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>duchamp_reader {%block titre %}{%endblock%}</title>
-    {% include "partials/metadata.html" %}
-    {% include "partials/css.html" %}
-    </style>
-</head>
-<body>
-<div class="container">
-
-    <!-- barre de navigation -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
-        <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
-            <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide"
-                   aria-label="Recherche">
-            <button class="btn btn-outline-info" type="submit">Rechercher</button>
-        </form>
-    </nav>
-
-    <!-- barre de navigation -->
-    <div class="wrapper">
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3>Menu</h3>
+    <head>
+        <meta charset="UTF-8">
+        <title>duchamp_reader {% block titre %}{% endblock %}</title>
+            {% include "partials/metadata.html" %}
+            {% include "partials/css.html" %}
+        </style>
+    </head>
+    <body>
+        <!-- barre de navigation -->
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top" id="mainNav">
+            <div class="container-fluid">
+            <input class="checkbox" type="checkbox" onclick="collapse()"/>
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <!--
+                <button type="button" id="sidebarCollapse" class="btn btn-info" onclick="collapse()">
+                    <i class="fas fa-bars fa-1x"></i>
+                </button>
+                -->
             </div>
-            <ul class="list-unstyled components">
-                <li class="active">
-                    <a href="{{ url_for('accueil') }}" data-toggle="collapse" aria-expanded="false"
-                       class="dropdown-toggle">
-                        Accueil
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="{{ url_for('nomination_index') }}" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">
-                        Nominations
-                    </a>
-                    <ul class="collapse list-unstyled submenu">
-                        {% if last_nominations %}
-                            {% for n in last_nominations %}
-                                <li><a href="{{ url_for('nomination_main', id_nomination=n.id) }}">
-                                {% if n.laureat == 1 %}Lauréat :{% else %}Nominé.e : {% endif %}
-                                    {{n.artiste.prenom}} {{n.artiste.nom}}</a></li>
-                                {% endfor %}
-                        {% endif %}
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="{{ url_for('artiste_index') }}" data-toggle="collapse" aria-expanded="false"
-                           class="dropdown-toggle">
-                            Artistes
-                        </a>
-                        <ul class="collapse list-unstyled submenu">
-                            {% if last_artistes %}
-                                {% for n in last_artistes %}
-                                    <li><a href="{{ url_for('artiste_main', id_artiste=n.id) }}">{{n.prenom}} {{n.nom}}</a></li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="{{ url_for('galerie_index') }}" data-toggle="collapse" aria-expanded="false"
-                            class="dropdown-toggle">
-                            Galeries
-                        </a>
-                        <ul class="collapse list-unstyled submenu">
-                            {% if last_galeries %}
-                                {% for n in last_galeries %}
-                                    <li><a href="{{ url_for('galerie_main', id_galerie=n.id) }}">{{n.nom}}</a></li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="{{ url_for('theme_index') }}" data-toggle="collapse" aria-expanded="false"
-                            class="dropdown-toggle">
-                            Thèmes
-                        </a>
-                        <ul class="collapse list-unstyled submenu">
-                            {% if last_themes %}
-                                {% for n in last_themes %}
-                                    <li><a href="{{ url_for('theme_main', id_theme=n.id) }}">{{n.nom}}</a></li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="{{ url_for('ville_index') }}" data-toggle="collapse" aria-expanded="false"
-                            class="dropdown-toggle">
-                            Villes
-                        </a>
-                        <ul class="collapse list-unstyled submenu">
-                            {% if last_villes %}
-                                {% for n in last_villes %}
-                                    <li><a href="{{ url_for('ville_main', id_ville=n.id) }}">{{n.nom}} ({{n.pays}})</a></li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="{{ url_for('about') }}" data-toggle="collapse" aria-expanded="false"
-                            class="dropdown-toggle">
-                            À propos
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <a class="navbar-brand" href="{{ url_for('accueil') }}">duchamp_reader</a>
+            <form class="form-inline" action="{{url_for('recherche')}}" method="GET">
+                <input class="form-control" name="keyword" type="search" placeholder="Recherche rapide"
+                    aria-label="Recherche">
+                    <button class="btn btn-outline-info" type="submit">Rechercher</button>
+            </form>
+        </nav>
+        <div class="container">
+
+            <!-- recherche -->
+            {% block homesearch %}{% endblock %}
+
+            <!-- sidebar -->
+            <div class="wrapper" id="sidebar" style="width: 0px;">
+                <nav>
+                    <div class="sidebar-header">
+                        <h3>Menu</h3>
+                    </div>
+                    <ul class="list-unstyled components">
+                        <li class="active">
+                            <a href="{{ url_for('accueil') }}" class="dropdown">
+                                Accueil
+                            </a>
+                        </li>
+                        <li class="active">
+                            <a href="#nominationMenu">
+                                <!--<a href="#nominationMenu" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">-->
+                                Nominations
+                            </a>
+                            <ul class="list-unstyled" id="nominationMenu">
+                            <!-- <ul class="collapse list-unstyled" id="nominationMenu"> -->
+                                <li><a href="{{ url_for('nomination_index') }}">Index des nominations</a></li>
+                                {% if last_nominations %}
+                                    {% for n in last_nominations %}
+                                        <li><a href="{{ url_for('nomination_main', id_nomination=n.id) }}">
+                                        {% if n.laureat == 1 %}Lauréat : {% else %}Nominé.e : {% endif %}
+                                        {{n.artiste.prenom}} {{n.artiste.nom}}</a></li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="active">
+                            <a href="#artisteMenu"><!--<a href="#artisteMenu" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">-->
+                                Artistes
+                            </a>
+                            <!--<ul class="collapse list-unstyled" id="artisteMenu">-->
+                            <ul class="list-unstyled" id="artisteMenu">
+                            <li><a href="{{ url_for('artiste_index') }}">Index des artistes</a></li>
+                                {% if last_artistes %}
+                                    {% for n in last_artistes %}
+                                        <li><a href="{{ url_for('artiste_main', id_artiste=n.id) }}">{{n.prenom}} {{n.nom}}</a></li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="active">
+                            <a href="#galerieMenu">
+                                <!-- <a href="#galerieMenu" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">-->
+                                Galeries
+                            </a>
+                            <ul class="list-unstyled" id="galerieMenu">
+                                <!-- <ul class="collapse list-unstyled" id="galerieMenu">-->
+                                <li><a href="{{ url_for('galerie_index') }}">Index des galeries</a></li>
+                                {% if last_galeries %}
+                                    {% for n in last_galeries %}
+                                        <li><a href="{{ url_for('galerie_main', id_galerie=n.id) }}">{{n.nom}}</a></li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="active">
+                            <a href="#themeMenu">
+                                <!-- <a href="#themeMenu" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">-->
+                                Thèmes
+                            </a>
+                            <ul class="list-unstyled" id="themeMenu">
+                            <!-- <ul class="collapse list-unstyled" id="themeMenu"> -->
+                                <li><a href="{{ url_for('theme_index') }}">Index des thèmes</a></li>
+                                {% if last_themes %}
+                                    {% for n in last_themes %}
+                                        <li><a href="{{ url_for('theme_main', id_theme=n.id) }}">{{n.nom}}</a></li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="active">
+                            <a href="#villeMenu">
+                                <!--<a href="#villeMenu" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">-->
+                                Villes
+                            </a>
+                            <ul class="list-unstyled" id="villeMenu">
+                                <!-- <ul class="collapse list-unstyled" id="villeMenu"> -->
+                                <li><a href="{{ url_for('ville_index') }}">Index des villes</a></li>
+                                {% if last_villes %}
+                                    {% for n in last_villes %}
+                                        <li><a href="{{ url_for('ville_main', id_ville=n.id) }}">{{n.nom}} ({{n.pays}})</a></li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="active">
+                            <a href="{{ url_for('about') }}">
+                                À propos
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="sidebarFermer">Fermer</a>
+                </nav>
+            </div>
+
+            <!-- corps du texte -->
+                <div class="row">
+                    <div class="col">
+                        {% block corps %}{% endblock %}
+                    </div>
+                </div>
         </div>
 
-        <!-- recherche -->
-        {% block homesearch %}{% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
 
-        <!-- corps du texte -->
-        <div class="row">
-            <div class="col">
-                {% block corps %}{% endblock %}
-            </div>
-        </div>
-    </div>
+            <script type="text/javascript">
+                var sidebar = document.querySelector("#sidebar");
+                var main = document.querySelector(".row");
+                var hero = document.querySelector(".hero");
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+                function sidebarTest() {
+                    console.log(sidebar.innerHTML);
+                };
+
+                function mainTest() {
+                    console.log(main.innerHTML);
+                };
+
+                function collapse() {
+                    if (sidebar.getAttribute("style") == "width: 0px;") {
+                        sidebar.setAttribute("style", "width: 250px; padding-left: 10px;");
+                        main.setAttribute("style", "margin-left: 250px;");
+                        hero.setAttribute("style", "margin-left: 250px;");
+                    } else {
+                        sidebar.setAttribute("style", "width: 0px;");
+                        main.setAttribute("style", "margin-left: auto;");
+                        hero.setAttribute("style", "margin-left: auto;");
+                    };
+                };
+
+                function closeNav() {
+                    sidebar.setAttribute("style", "width: 0px;");
+                    main.setAttribute("style", "margin-left: auto;");
+                    hero.setAttribute("style", "margin-left: auto;");
+                };
+            </script>
+
+                <!--
+                $(document).ready(function () {
+
+                    $('#sidebarCollapse').on('click', function () {
+                        $('#sidebar').toggleClass('active');
+                    });
+
+                });
+                -->
     </body>
 </html>
